--- a/index.css
+++ b/index.css
@@ -2,12 +2,13 @@
     position: relative;
 }
 #overlay {
-    position: absolute;
-    left: 300px;
-    top: 200px;
+    position: relative;
+    left: 0px;
+    top: 50px;
     background-color: rgb(0 0 0);
     color:#cff5ff;
     font-family: monospace;
     padding: 1em;
     font-size:xx-large;
+    text-align: center;
 }
